Add completely separate gradle projects for ffm vips modules